# Kalman_pkg

my_kalman_pkg/: package.xml  setup.cfg  setup.py
my_kalman_pkg/my_kalman_pkg/: animate_kalman.py  csv_publisher.py  filter_params.py  kalman_node.py  plot_csv_comparison.py
my_kalman_pkg/rosbag2_2025_05_27-00_40_20/: metadata.yaml  rosbag2_2025_05_27-00_40_20_0.db3
