<?xml version="1.0"?>
<package format="3">
  <name>my_kalman_pkg</name>
  <version>0.0.0</version>
  <description>Kalman Filter ROS 2 Example</description>
  <maintainer email="brscskn20032003@gmail.com">Barış</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

